--- a/package.json
+++ b/package.json
@@ -1,27 +1,26 @@
 {
-    "name": "pigeonbolt-customer-signup",
+    "name": "pigeonbolt-web",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@apollo/client": "^3.2.4",
-        "@material-ui/core": "^4.11.0",
-        "@material-ui/icons": "^4.9.1",
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.3.2",
         "@testing-library/user-event": "^7.1.2",
-        "apollo-boost": "^0.4.9",
-        "bootstrap": "^4.5.3",
-        "graphql": "^15.3.0",
-        "react": "^16.13.1",
-        "react-apollo": "^3.1.5",
-        "react-bootstrap": "^1.3.0",
-        "react-dom": "^16.13.1",
-        "react-hook-form": "^6.9.2",
-        "react-hook-form-devtools": "^1.2.0",
+        "@types/jest": "^24.0.0",
+        "@types/node": "^12.0.0",
+        "@types/react": "^16.9.0",
+        "@types/react-dom": "^16.9.0",
+        "@types/react-router-dom": "^5.1.6",
+        "@types/react-scroll": "^1.8.2",
+        "classnames": "^2.2.6",
+        "hamburger-react": "^2.3.0",
+        "react": "^16.14.0",
+        "react-dom": "^16.14.0",
+        "react-router-dom": "^5.2.0",
         "react-scripts": "3.4.3",
-        "typescript": "^4.0.3",
-        "uuid": "^8.3.1",
-        "uuidv4": "^6.2.4"
+        "react-scroll": "^1.8.1",
+        "swiper": "^6.3.4",
+        "typescript": "~3.7.2"
     },
     "scripts": {
         "start": "react-scripts start",
@@ -45,11 +44,6 @@
         ]
     },
     "devDependencies": {
-        "@types/jest": "^24.0.0",
-        "@types/node": "^12.0.0",
-        "@types/react": "^16.9.0",
-        "@types/react-dom": "^16.9.0",
-        "@types/uuid": "^8.3.0"
-    },
-    "description": "PigeonBolt App"
+        "@types/classnames": "^2.2.10"
+    }
 }
