--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/classnames": "^2.2.11",
+    "@types/faker": "^5.1.4",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react-dom": "^16.9.8",
@@ -16,6 +17,7 @@
     "@types/react-scroll": "^1.8.2",
     "animate.css": "^4.1.1",
     "classnames": "^2.2.6",
+    "faker": "^5.1.0",
     "hamburger-react": "^2.3.0",
     "history": "^5.0.0",
     "node-sass": "4.14.1",
