--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/faker": "^5.1.4",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
+    "@types/platform": "^1.3.3",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.6",
     "@types/react-scroll": "^1.8.2",
@@ -21,6 +22,7 @@
     "hamburger-react": "^2.3.0",
     "history": "^5.0.0",
     "node-sass": "4.14.1",
+    "platform": "^1.3.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
