--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "node-sass": "4.14.1",
     "platform": "^1.3.6",
     "react": "^17.0.1",
+    "react-bell-icon": "^1.0.1",
     "react-dom": "^17.0.1",
+    "react-html-renderer": "^0.3.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-scroll": "^1.8.1",
