--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.3.12",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^5.11.4",
@@ -17,8 +18,10 @@
     "@types/react-router-dom": "^5.1.6",
     "@types/react-scroll": "^1.8.2",
     "animate.css": "^4.1.1",
+    "axios": "^0.21.1",
     "classnames": "^2.2.6",
     "faker": "^5.1.0",
+    "graphql": "^15.5.0",
     "hamburger-react": "^2.3.0",
     "history": "^5.0.0",
     "node-sass": "4.14.1",
@@ -30,6 +33,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-scroll": "^1.8.1",
+    "sweetalert": "^2.1.2",
     "swiper": "^6.3.5",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
