--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-bell-icon": "^1.0.1",
     "react-dom": "^17.0.1",
     "react-html-renderer": "^0.3.2",
+    "react-particles-js": "^3.4.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-scroll": "^1.8.1",
