fix: replace broken links fix: update terms, service and privacy policies

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "PigeonBolt",
-  "name": "PigeonBolt",
+  "short_name": "PigeonUltra",
+  "name": "PigeonUltra",
   "icons": [
     {
       "src": "logo.png",
