--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-scroll": "^1.8.1",
+    "styled-components": "^5.3.1",
     "sweetalert": "^2.1.2",
     "swiper": "^6.3.5",
     "typescript": "^4.0.3",
@@ -64,6 +65,10 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^16.9.55"
+    "@types/react": "^16.9.55",
+    "@types/styled-components": "^5.1.14"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
