--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "styled-components": "^5.3.1"
+    "styled-components": "^5.3.1",
+    "wowjs": "^1.1.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^13.2.1",
@@ -42,5 +43,4 @@
       "pre-push": ""
     }
   }
-  
 }
