--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.1",
+    "swiper": "^7.0.8",
     "wowjs": "^1.1.3"
   },
   "devDependencies": {
