--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "postinstall": "husky install"
   },
   "dependencies": {
+    "@svgr/webpack": "^5.5.0",
     "bootstrap": "^5.0.0-beta3",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.1",
-    "swiper": "^7.0.8",
+    "swiper": "^7.0.9",
     "wowjs": "^1.1.3"
   },
   "devDependencies": {
