--- a/package.json
+++ b/package.json
@@ -1,49 +1,51 @@
 {
-  "name": "pigeonultra-website",
-  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "prepare": "husky install",
+    "pre-commit": "lint-staged",
     "commit": "cz",
-    "postinstall": "husky install"
+    "lint": "next lint --fix",
+    "type-check": "tsc --project tsconfig.json --pretty --noEmit"
   },
   "dependencies": {
-    "@svgr/webpack": "^5.5.0",
-    "bootstrap": "^5.0.0-beta3",
-    "next": "11.1.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "styled-components": "^5.3.1",
-    "swiper": "^7.0.9",
-    "wowjs": "^1.1.3"
+    "next": "latest",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-is": "^17.0.2",
+    "styled-components": "^5.2.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^13.2.1",
     "@commitlint/config-conventional": "^13.2.0",
-    "@types/react": "17.0.27",
-    "@types/styled-components": "^5.1.15",
-    "babel-plugin-styled-components": "^1.13.2",
-    "cz-conventional-changelog": "3.3.0",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2",
-    "husky": "^7.0.2",
-    "typescript": "4.4.3"
-  },
-  "resolutions": {
-    "styled-components": "^5"
+    "@types/node": "15.0.0",
+    "@types/react": "17.0.4",
+    "@types/react-dom": "17.0.3",
+    "@types/styled-components": "5.1.9",
+    "autoprefixer": "^10.3.7",
+    "babel-plugin-styled-components": "^1.12.0",
+    "cz-conventional-changelog": "^3.3.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^11.2.4",
+    "postcss": "^8.3.11",
+    "tailwindcss": "^2.2.17",
+    "typescript": "4.2.4"
   },
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
   },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx}": [
+      "yarn run lint"
+    ]
+  },
   "husky": {
     "hooks": {
-      "pre-commit": "",
-      "pre-push": ""
+      "pre-commit": "lint-staged"
     }
   }
 }
